--- a/css/main-form.css
+++ b/css/main-form.css
@@ -14,7 +14,7 @@ body {
 
 .section__main {
   background-color: #E5F3F2;
-  height: 330px;
+  height: 360px;
   position: fixed;
   width: 100vw;
   z-index: 2;
@@ -58,6 +58,11 @@ input {
 .form__button-save:hover {
   background-color: #045E55;
   color: #FFF;
+}
+
+.form__button-save:disabled{
+  background-color: #dadada;
+  color: #f1f1f1;
 }
 
 input::placeholder {
