--- a/css/todo-cards.css
+++ b/css/todo-cards.css
@@ -69,7 +69,7 @@
   display: inline-block;
   float: left;
   height: 20px;
-  margin: 5px 15px 0px 0px;
+  margin: 5px 15px 0 0;
 }
 
 .upvote {
@@ -108,12 +108,9 @@
   text-align: left;
 }
 
-.importance {
-  color: #6d6e71;
-  font-size: 15px;
-  margin-top: 8px;
-  text-align: left;
-  float: left;
+.icons {
+  display: flex;
+  justify-content: space-between;
 }
 
 .completedBtn {
@@ -123,4 +120,20 @@
   background-color: #00a79d;
   color: #fff;
   font-size: 0.9rem;
+}
+
+.low {
+  color: #d8cf59;
+}
+
+.normal {
+  color: #ffa355;
+}
+
+.high {
+  color: #d26d23;
+}
+
+.critical {
+  color: #ff0000;
 }
